k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tasklist-backend
spec:
  selector:
    app: tasklist-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
